--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Pitch Distribution based Automatic Mode Recognition Toolbox \n",
     "\n",
-    "### This notebook is a demonstration for how to use the 'Title' toolbox. \n",
+    "### This notebook is a demonstration for how to use the Pitch Distribution based Automatic Mode Recognition Toolbox . \n",
     "#### There are 5 steps in this demonstration:\n",
     "\n",
     "1 - Downloading Turkish Makam Recognition Dataset\n",
@@ -494,13 +494,6 @@
     "%matplotlib inline\n",
     "%run -i 'automaticclassification.py' -hl 70 90 110 130 150 170 190 -lr 0.001 -m 0.5"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
